# flash-moe-rocm-demo

./: .gitignore  README.md  WAKEUP.md  pyproject.toml
docs/: _archive-upstream-pr-body.md  agent-demo-transcript.md  agent-on-dsv3-finding.md  architecture.md  benchmarks.md  comparison-flash-moe-vs-llamacpp.md  demo-video-storyboard.md  prior_art.md  sample-completion-dsv3.md  sample-completions-dsv3.md
scripts/: build_llamacpp.sh  pack_model.sh  run_server.sh
src/agent_demo/: __init__.py  __main__.py  agent.py  prompts.py  tools.py
