[project]
name = "flash-moe-agent-demo"
version = "0.1.0"
description = "Tool-using agent demo for the flash-moe-rocm llama.cpp branch"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sergey Subbotin", email = "ssubbotin@gmail.com"}]
dependencies = [
    "openai>=1.30",
    "httpx>=0.27",
]

[project.scripts]
agent-demo = "agent_demo.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
